# MyCourseWork_VS

./: CMakeLists.txt  README.md
doc/: Doxyfile.in
libs/: README.txt
prj/: Button.cpp  Button.h  CMakeLists.txt  Collision.cpp  Collision.h  FilesBank.cpp  FilesBank.h  GameMenu.cpp  GameMenu.h  HigherGround.cpp  Platforms.cpp  Platforms.h  Player.cpp  Player.h  Records.cpp  Records.h
src/audio/: README.txt
src/top/: data.txt
